# -

./: .gitmodules  README.md  mysql.sql  test_procedure.sql  view.sql
backend/: .gitignore  CMakeLists.txt  SearchorUpdate.cpp  config.yaml  database.cpp  main.cpp  save_image.cpp  save_image.h  test_database  upload.cpp  upload.h  usr_auth.cpp  usr_auth.h
backend/include/: SearchorUpdate.h  common.h  database.h  dealmsg.h  display.h  heartbeat.h  save_image.h
backend/source/: SearchorUpdate.cpp  database.cpp  dealmsg.cpp  display.cpp  heartbeat.cpp  main.cpp  save_image.cpp  upload.cpp  usr_auth.cpp
second-hand-market/: README.md  package-lock.json  package.json  vue.config.js
second-hand-market/public/: index.html
second-hand-market/src/: App.vue  api.js  main.js
second-hand-market/src/components/: ForumPage.vue  Listings.vue  Login.vue  Mainpage.vue  ProductDetails.vue  Profile.vue  Register.vue  SearchResults.vue  StartPage.vue
second-hand-market/src/router/: index.js
